--- a/webpage/pages/sujet.html
+++ b/webpage/pages/sujet.html
@@ -65,7 +65,7 @@
         </div>
         <ul class="navbar-nav ml-auto">
           <li class="dropdown nav-item">
-            <a href="pages/sujet.html" class="nav-link">
+            <a href="./sujet.html" class="nav-link">
               <i class="fas fa-question-circle mt-08" aria-hidden="true"></i>
              <p>De quoi parle-t-on ?</p>
             </a>
@@ -116,8 +116,8 @@
             <h3 class="title">Les risques des réseaux</h3>
               <p>
                   Les réseaux sociaux sont de plus en plus nombreux, et occupent une grande partie du quotidien des jeunes
-                  aujourd’hui. Bien que leur utilisation soit plutôt positive en terme de distraction, ils s’avèrent parfois
-                  être néfastes, et présentent des risques dangereux pour les utilisateurs.
+                  aujourd’hui. Bien que leur utilisation soit plutôt positive en terme de distraction, les réseaux s’avèrent
+                  parfois être néfastes, et présentent des risques dangereux pour les utilisateurs.
 
                   Le sujet abordé par notre projet est la conception d’un nouveau réseau social, qui a pour but de mieux
                   encadrer les activités présentées et limiter les risques d’utilisation.
@@ -133,8 +133,8 @@
             <br/>
             <h3 class="title">Contrer le cyber-harcèlement et les propos haineux</h3>
               <p>
-                  20% des jeunes disent avoir déjà été confrontés au cyber-harcèlement, malheureusement ce problème
-                  ne risque pas de disparaître, mais nous avons pensé à un moyen de le limiter au maximum.
+                20% des jeunes disent avoir déjà été confrontés au cyber-harcèlement<a href="#communique-e-enfance"><sup>[1]</sup></a>, malheureusement ce problème
+                  ne semble pas disparaître, mais nous avons pensé à un moyen de le limiter au maximum.
                   Cela se concrétise notamment par un système de signalement conséquent, puisqu’il dépend du
                   pourcentage du nombre de membres de la communauté. Une fois qu’un contenu est sufisamment signalé,
                   il est retiré automatiquement, jusqu’à réapprobation d’un modérateur. En plus de cela, l’utilisateur
@@ -153,11 +153,11 @@
               <p>
                   Pour inciter les utilisateurs à rester actifs de façon permanente sur l’application, un système
                   de points est mis en place. L’utilisateur verra alors son score augmenter au sein de la communauté
-                  au fur et à mesure de sa participation aux défis. L’inactivité au bout d’un certain temps a pour
+                  au fur et à mesure de sa participation aux défis. L’inactivité, au bout d’un certain temps, a pour
                   conséquence d’être relégué à un niveau plus bas.
               </p>
             <br/>
-            <h3 class="title">Utilisation des données personnelles</h3>
+            <h3 class="title" id="communique-e-enfance">Utilisation des données personnelles</h3>
               <p>
                   La récupération de données personnelles de l’utilisateur est un sujet critique, mais qui reste
                   toutefois indispensable pour créer un produit fiable. Grâce aux conditions générales d’utilisation,
@@ -168,19 +168,23 @@
             <br/>
             <h3 class="title">Liens utiles</h3>
             <p class="blockquote">
-              Cyberviolence et cyberharcèlement : approches sociologiques<br/>
+              [1] Le Cyberharcèlement des jeunes<br/>
+              <a target="_blank" href="https://e-enfance.org/communique-de-presse-etude-caisse-depargne-association-e-enfance-sur-le-cyberharcelement-des-jeunes/">Communiqué de presse de l'association e-Enfance</a>
+            </p>
+            <p class="blockquote">
+              [2] Cyberviolence et cyberharcèlement : approches sociologiques<br/>
               <a target="_blank" href="https://www.cairn.info/revue-la-nouvelle-revue-de-l-adaptation-et-de-la-scolarisation-2011-1-page-47.htm">Article sur le site du cairn</a>
             </p>
             <p class="blockquote">
-              Cyberharcèlement chez les mineurs<br/>
+              [3] Cyberharcèlement chez les mineurs<br/>
               <a target="_blank" href="https://www.sciencedirect.com/science/article/abs/pii/S0003448720300718">Article sur le site sciencedirect.com</a>
             </p>
             <p class="blockquote">
-              Génération Y: Les jeunes et les réseaux sociaux, de la dérision à la subversion<br/>
+              [4] Génération Y: Les jeunes et les réseaux sociaux, de la dérision à la subversion<br/>
               <a target="_blank" href="https://books.google.fr/books?hl=fr&lr=&id=1G0XAgAAQBAJ&oi=fnd&pg=PA7&dq=critique+r%C3%A9seaux+sociaux&ots=3hzfDXgCj6&sig=gTve0mWwXOyTZ_bF83xY0DJ-F0g&redir_esc=y#v=onepage&q=critique%20r%C3%A9seaux%20sociaux&f=false">Livre de Monique Dagnaud</a>
             </p>
             <p class="blockquote">
-              Les réseaux sociaux : un regard critique<br/>
+              [5] Les réseaux sociaux : un regard critique<br/>
               <a target="_blank" href="http://barthes.enssib.fr/articles/Guichard-Reseaux-sociaux.pdf">Article sur le site Barthes</a>
             </p>
             <br/>
